--- a/public/styl.css
+++ b/public/styl.css
@@ -1,190 +1,108 @@
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-header{
+header {
     display: flex;
-   
     justify-content: space-between;
     height: 70px;
     background-color: black;
     align-items: center;
-    padding:  0 2%;
+    padding: 0 2%;
+   
 }
-header a{
+
+header a {
     color: white;
     text-decoration: none;
 }
 
-.progress {
-    --bs-progress-height: 1rem;
-    --bs-progress-font-size: 0.75rem;
-    --bs-progress-bg: var(--bs-secondary-bg);
-   
-    --bs-progress-box-shadow: var(--bs-box-shadow-inset);
-    --bs-progress-bar-color: #fff;
-    --bs-progress-bar-bg: #0d6efd;
-    --bs-progress-bar-transition: width 0.6s ease;
-    display: flex;
-    height: var(--bs-progress-height);
-    overflow: hidden;
-    font-size: var(--bs-progress-font-size);
-    background-color:#fff;
-    border-radius: 20px;
-    width: 216px;
-    margin-left: -15%;
-}
-
-.progress-bar {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
-    color: var(--bs-progress-bar-color);
-    text-align: center;
-    white-space: nowrap;
-    background-color: var(--bs-progress-bar-bg);
-    transition: var(--bs-progress-bar-transition);
-    width: 54px;
-}
-
-#blbnicek{
+#blbnicek {
     font-size: 1.5em;
-}
-
-nav > a.active{
-    background-color: green;
 }
 
 nav {
     display: grid;
-    
-    grid-template-columns: 100px 70px;
+   
     grid-gap: 15px;
     text-align: center;
 }
 
-nav  a{
-    text-transform:capitalize;
-    
-    border-radius: 5px;
-    padding: 3px;
-    text-decoration: none;
-}
-
-#prvni{
-        display: flex; 
-        flex-direction: column;
-        height: calc(100vh-70px);
-       /* background-color: red;*/
-       
-}
-section{
-    background-image:url("img/IMG_2.jpeg");
-    height: 100vh;
-}
-
-/*
-
-#ukoly p, button
-{
-    margin-top: 20px;
-    width: 200px;
-    
-    align-items: center;
-}
-ul
-{
-    max-height: 30px;
-    max-width: 1000px;
-    
-    
-}
-*/
-
-#prvni h1,h2,ul{
-    margin: 13px;
-    margin-left: 200px;
+#prvni {
     display: flex;
+    flex-direction: column;
+    min-height: 87.5vh;
+    width: 100%;
+    background-image: url("img/IMG_2.jpeg");
 }
 
-#prvni button, input{
-    width:  200px;
-    margin-left: 300px;
-    display: block;
+#ukoly {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    
+}
+#ukoly ul {
+    width: 1000px;
+    padding: 5px;
+    
+}
+form {
+    text-align: center ;
+    padding:0px ;
 }
 
-#prvni input{
-    width: 197px;
-}
-#input{
-    margin-top: 4px;
-    margin-left: -100px;
-}
-    
-#poznamka{
-    position: fixed;
-    
-    right: 100px;
-    top: 100px;
-    color: rgb(0, 0, 0);
-    width: 400px;
-    background-color: aliceblue;
-    min-height: 300px;
-    padding: 10px;
-    text-decoration: underline;
-}
-#poznamka div{
-    display: grid;
-    grid-template-columns: 100px 10px;
+#ukol-name{
+    margin-top: 17px;
+    margin-bottom: 12.5px;
 }
 
-/*
-#input{
-    width: 40px;
-    margin: 10px;
-    margin-left: 200px;
-    
+
+#ukoly li {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    max-width: 1000px;
+    gap: 30px;
+    list-style: none;
+    padding-top: 22.5px;
+    padding-left: 50px;
 }
-    */
-    .animace{
-        animation-name: odstranit;
-        animation-duration: 15s;
+#ukoly p {
+    width:200px;
+}
+
+#ukoly li p {
+    margin: 0;
+}
+
+#ukoly li button {
+    padding: 5px 10px;
+}
+
+
+
+@media only screen and (max-width: 850px) {
+    #knizka {
+        display: none;
+    }
+    #blbnicek{
+        display: none;
+    }
+    nav{
+        margin: auto;
     }
     
-    @keyframes odstranit {
-        from {margin-left: 200px;}
-        to {margin-left: 4000px;}
-      }
-
-      @media only screen and (max-width: 850px){
-        #knizka{
-            display: none;
-        }
-        .progress{
-            margin-left: 0px;
-        }
-        nav > a.active{
-            background-color: black;
-        }
-        #prvni h1, h2, ul{
-            margin-left: 5px;
-        }
-        #prvni button, input {
-            margin-left: 110px;
-            width:150px;
-        }
-        #input button{
-            width:200px;
-        }
-        .animace{
-            animation-name: odstranit;
-            animation-duration: 5s;
-        }
-        
-        @keyframes odstranit {
-            from {margin-left: 5px;}
-            to {margin-left: 110%;}
-          }
-      }
+    
+    
+}
+@media only screen and (max-width: 650px) {
+   nav{
+    display:none;
+   }
+    
+    
+    
+}
